# robin

./: README.md  SKILL.md  SPEC.md  install.sh  pyproject.toml
.github/workflows/: release.yml
docs/: guide.md
references/: robin-config.json.example
scripts/: add_entry.py  reindex.py  review.py  search.py  selftest.py  topics.py
src/robin/: __init__.py  cli.py  config.py  doctor.py  entry_ops.py  files.py  index.py  media.py  models.py  parser.py  review_logic.py  search_logic.py  serializer.py
tests/: conftest.py  test_add_entry.py  test_config.py  test_doctor.py  test_entries.py  test_parser.py  test_reindex.py  test_review.py  test_search.py  test_selftest.py
