[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robin-commonplace"
version = "0.1.0"
description = "A digital commonplace book for AI agents — collect, curate, and periodically review personal knowledge."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
  {name = "Robin Contributors"}
]
keywords = ["commonplace-book", "knowledge-management", "ai-agent", "notes", "spaced-repetition"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
robin-add = "scripts.add_entry:main"
robin-search = "scripts.search:main"
robin-topics = "scripts.topics:main"
robin-review = "scripts.review:main"
robin-reindex = "scripts.reindex:main"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["scripts*", "robin*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
